--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emoji-mart/data": "^1.1.0",
+    "@emoji-mart/react": "^1.1.0",
     "@navjobs/upload": "^3.2.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -11,7 +13,8 @@
     "axios": "^0.21.1",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
-    "emoji-mart": "^5.2.2",
+    "emoji-mart": "^5.4.0",
+    "lodash": "^4.17.21",
     "node-sass": "^7.0.3",
     "react": "^17.0.1",
     "react-device-detect": "^2.2.2",
