--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "server_socialgrad",
   "scripts": {
-    "start": "HOST=0.0.0.0 cross-env NODE_ENV=production node ./index.js",
+    "start": "HOST=127.0.0.1 cross-env NODE_ENV=production node ./index.js",
     "client": "npm run start --prefix ../client",
     "client:install": "npm i --prefix ../client",
     "client:build": "npm run build --prefix ../client",
@@ -29,6 +29,7 @@
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
+    "nanoid": "^4.0.0",
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
     "path": "^0.12.7",
@@ -36,6 +37,7 @@
     "pg-hstore": "^2.3.4",
     "sendmail": "^1.6.1",
     "sequelize": "^6.12.0-alpha.1",
+    "socket.io": "^4.5.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
