--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emoji-mart/data": "^1.1.0",
     "@emoji-mart/react": "^1.1.0",
+    "@n8tb1t/use-scroll-position": "^2.0.3",
     "@navjobs/upload": "^3.2.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -15,7 +16,7 @@
     "date-fns": "^2.29.3",
     "emoji-mart": "^5.4.0",
     "lodash": "^4.17.21",
-    "nanoid": "^4.0.0",
+    "nanoid": "^4.0.1",
     "node-sass": "^7.0.3",
     "react": "^17.0.1",
     "react-device-detect": "^2.2.2",
