--- a/server/package.json
+++ b/server/package.json
@@ -29,7 +29,8 @@
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
-    "nanoid": "^4.0.0",
+    "nanoid": "3.3.4",
+    "node-fetch": "2.6.1",
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
     "path": "^0.12.7",
